--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
     </style>
@@ -64,32 +64,32 @@
 
 
 <section class="section cards-container">
-    <div class="card">
+    <div onclick="goToMensClothin()" class="card">
         <h3>Upto 60% off | Styles for men</h3>
         <img src="https://images-eu.ssl-images-amazon.com/images/G/31/img21/MA2023/WRS/P0/ethnic/Manyavar_2.png">
     </div>
 
-    <div class="card">
+    <div  onclick="goToFitness()" class="card">
         <h3>Starting from 99/- | Start your fitness journey</h3>
         <img src="https://images-eu.ssl-images-amazon.com/images/G/31/img19/Sports/GW_Desktop/1199101_379x304_Compressed._SY304_CB448278349_.jpg">
     </div>
 
-    <div class="card">
+    <div onclick="goToHeadphones()" class="card">
         <h3>Upto 70% off on Earphones and audio devices</h3>
         <img src="https://images-eu.ssl-images-amazon.com/images/G/31/img23/CEPC/augart/event/bigbets2/Airdope170_Pc.jpg">
     </div>
 
-    <div class="card">
+    <div onclick="goToBabyProd()" class="card">
         <h3>Baby diapers and wipes at great prices</h3>
         <img src="https://images-eu.ssl-images-amazon.com/images/G/31/img22/Baby/cnnjpp1/CC_Rev2x._SY608_CB594433898_.jpg">
     </div>
 
-    <div class="card">
+    <div onclick="goToLaptops()" class="card">
         <h3>Get the best prices on Laptops and</h3>
         <img src="https://images-eu.ssl-images-amazon.com/images/G/31/img22/Laptops/Apr/Quiz/Bigbets_PC_Honor_02.jpg">
     </div>
 
-    <div class="card">
+    <div onclick="goToSmartphones()" class="card">
         <h3>Upto 40% off on Smartphones</h3>
         <img src="https://m.media-amazon.com/images/G/31/img23/Wireless/nbshagun/BAU/realme/CLP/5Sept/D88635308_IN_WLD_BAU_CL_Page_revamp_Affordable_1._CB595895834_.jpg">
     </div>
