--- a/mens-clothing.html
+++ b/mens-clothing.html
@@ -56,7 +56,7 @@
             </div>
 
             <div class="prod-card">
-                <img src="https://m.media-amazon.com/images/I/61hEqppV-ZL._AC_UL800_FMwebp_QL65_.jpg" alt="">
+                <img src="https://m.media-amazon.com/images/I/61U+9sLBh5L._AC_UL800_FMwebp_QL65_.jpg" alt="">
                 <p class="company-name">Vierdo</p>
                 <h3 class="prod-title">Veirdo® Oversized Loose Baggy Fit Drop Shooulder Half Sleeves Pure Cotton Will Never Die
                     Graphic Printed T-Shirt for Men</h3>
@@ -101,6 +101,14 @@
             </div>
         </div>
     </div>
+
+    <footer class="footer">
+        <button onclick="goToTop()" class="gotop">Go To Top</button>
+        <div style="text-align: center;" class="footer-p">
+            <p>© 2023 Web Technologies Project</p>
+            <p>Adrish Mitra | Ansh Sinha | Chirag Bihani | Jaimeet Singh | Pratanu Duloi </p>
+        </div>
+    </footer>
     
 </body>
 </html>
