--- a/mens-clothing.html
+++ b/mens-clothing.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,200" />
     <title>Men's Clothing</title>
 </head>
 <body>
@@ -33,8 +33,13 @@
                 <img src="https://m.media-amazon.com/images/I/61hEqppV-ZL._AC_UL800_FMwebp_QL65_.jpg" alt="">
                 <p class="company-name">Vierdo</p>
                 <h3 class="prod-title">Veirdo® Oversized Loose Baggy Fit Drop Shooulder Half Sleeves Pure Cotton Will Never Die Graphic Printed T-Shirt for Men</h3>
-                <span class="price"><span class="material-symbols-outlined">currency_rupee</span> 359</span>
-                <button class="add-to-cart">Add to Cart <span class="material-symbols-outlined">shopping_cart</span></button>
+                <div class="price-rating">
+                    <span class="price"><span class="material-symbols-outlined">currency_rupee</span> 359</span>
+                    <span class="rating"><span class="material-symbols-outlined star">
+                            star
+                    </span> 4.2</span>
+                </div>
+            <button class="add-to-cart">Add to Cart <span class="material-symbols-outlined">shopping_cart</span></button>
             </div>
 
             <div class="prod-card">
@@ -42,8 +47,13 @@
                 <p class="company-name">Vierdo</p>
                 <h3 class="prod-title">Veirdo® Oversized Loose Baggy Fit Drop Shooulder Half Sleeves Pure Cotton Will Never Die
                     Graphic Printed T-Shirt for Men</h3>
-                <span class="price"><span class="material-symbols-outlined">currency_rupee</span> 359</span>
-                <button class="add-to-cart">Add to Cart <span class="material-symbols-outlined">shopping_cart</span></button>
+                <div class="price-rating">
+                    <span class="price"><span class="material-symbols-outlined">currency_rupee</span> 359</span>
+                    <span class="rating"><span class="material-symbols-outlined star">
+                            star
+                        </span> 4.2</span>
+                </div>
+             <button class="add-to-cart">Add to Cart <span class="material-symbols-outlined">shopping_cart</span></button>
             </div>
 
             <div class="prod-card">
@@ -51,7 +61,12 @@
                 <p class="company-name">Vierdo</p>
                 <h3 class="prod-title">Veirdo® Oversized Loose Baggy Fit Drop Shooulder Half Sleeves Pure Cotton Will Never Die
                     Graphic Printed T-Shirt for Men</h3>
-                <span class="price"><span class="material-symbols-outlined">currency_rupee</span> 359</span>
+                <div class="price-rating">
+                    <span class="price"><span class="material-symbols-outlined">currency_rupee</span> 359</span>
+                    <span class="rating"><span class="material-symbols-outlined star">
+                            star
+                        </span> 4.2</span>
+                </div>
                 <button class="add-to-cart">Add to Cart <span class="material-symbols-outlined">shopping_cart</span></button>
             </div>
 
@@ -60,7 +75,12 @@
                 <p class="company-name">Vierdo</p>
                 <h3 class="prod-title">Veirdo® Oversized Loose Baggy Fit Drop Shooulder Half Sleeves Pure Cotton Will Never Die
                     Graphic Printed T-Shirt for Men</h3>
-                <span class="price"><span class="material-symbols-outlined">currency_rupee</span> 359</span>
+                <div class="price-rating">
+                    <span class="price"><span class="material-symbols-outlined">currency_rupee</span> 359</span>
+                    <span class="rating"><span class="material-symbols-outlined star">
+                            star
+                        </span> 4.2</span>
+                </div>
                 <button class="add-to-cart">Add to Cart <span class="material-symbols-outlined">shopping_cart</span></button>
             </div>
 
@@ -69,7 +89,12 @@
                 <p class="company-name">Vierdo</p>
                 <h3 class="prod-title">Veirdo® Oversized Loose Baggy Fit Drop Shooulder Half Sleeves Pure Cotton Will Never Die
                     Graphic Printed T-Shirt for Men</h3>
-                <span class="price"><span class="material-symbols-outlined">currency_rupee</span> 359</span>
+                <div class="price-rating">
+                    <span class="price"><span class="material-symbols-outlined">currency_rupee</span> 359</span>
+                    <span class="rating"><span class="material-symbols-outlined star">
+                            star
+                        </span> 4.2</span>
+                </div>
                 <button class="add-to-cart">Add to Cart <span class="material-symbols-outlined">shopping_cart</span></button>
             </div>
 
@@ -78,7 +103,12 @@
                 <p class="company-name">Vierdo</p>
                 <h3 class="prod-title">Veirdo® Oversized Loose Baggy Fit Drop Shooulder Half Sleeves Pure Cotton Will Never Die
                     Graphic Printed T-Shirt for Men</h3>
-                <span class="price"><span class="material-symbols-outlined">currency_rupee</span> 359</span>
+                <div class="price-rating">
+                    <span class="price"><span class="material-symbols-outlined">currency_rupee</span> 359</span>
+                    <span class="rating"><span class="material-symbols-outlined star">
+                            star
+                        </span> 4.2</span>
+                </div>
                 <button class="add-to-cart">Add to Cart <span class="material-symbols-outlined">shopping_cart</span></button>
             </div>
 
@@ -87,7 +117,12 @@
                 <p class="company-name">Vierdo</p>
                 <h3 class="prod-title">Veirdo® Oversized Loose Baggy Fit Drop Shooulder Half Sleeves Pure Cotton Will Never Die
                     Graphic Printed T-Shirt for Men</h3>
-                <span class="price"><span class="material-symbols-outlined">currency_rupee</span> 359</span>
+                <div class="price-rating">
+                    <span class="price"><span class="material-symbols-outlined">currency_rupee</span> 359</span>
+                    <span class="rating"><span class="material-symbols-outlined star">
+                            star
+                        </span> 4.2</span>
+                </div>
                 <button class="add-to-cart">Add to Cart <span class="material-symbols-outlined">shopping_cart</span></button>
             </div>
 
@@ -96,7 +131,12 @@
                 <p class="company-name">Vierdo</p>
                 <h3 class="prod-title">Veirdo® Oversized Loose Baggy Fit Drop Shooulder Half Sleeves Pure Cotton Will Never Die
                     Graphic Printed T-Shirt for Men</h3>
-                <span class="price"><span class="material-symbols-outlined">currency_rupee</span> 359</span>
+                <div class="price-rating">
+                    <span class="price"><span class="material-symbols-outlined">currency_rupee</span> 359</span>
+                    <span class="rating"><span class="material-symbols-outlined star">
+                            star
+                        </span> 4.2</span>
+                </div>
                 <button class="add-to-cart">Add to Cart <span class="material-symbols-outlined">shopping_cart</span></button>
             </div>
         </div>
