--- a/index.html
+++ b/index.html
@@ -79,11 +79,6 @@
         <img src="https://images-eu.ssl-images-amazon.com/images/G/31/img23/CEPC/augart/event/bigbets2/Airdope170_Pc.jpg">
     </div>
 
-    <div onclick="goToBabyProd()" class="card">
-        <h3>Baby diapers and wipes at great prices</h3>
-        <img src="https://images-eu.ssl-images-amazon.com/images/G/31/img22/Baby/cnnjpp1/CC_Rev2x._SY608_CB594433898_.jpg">
-    </div>
-
     <div onclick="goToLaptops()" class="card">
         <h3>Get the best prices on Laptops and</h3>
         <img src="https://images-eu.ssl-images-amazon.com/images/G/31/img22/Laptops/Apr/Quiz/Bigbets_PC_Honor_02.jpg">
@@ -92,6 +87,21 @@
     <div onclick="goToSmartphones()" class="card">
         <h3>Upto 40% off on Smartphones</h3>
         <img src="https://m.media-amazon.com/images/G/31/img23/Wireless/nbshagun/BAU/realme/CLP/5Sept/D88635308_IN_WLD_BAU_CL_Page_revamp_Affordable_1._CB595895834_.jpg">
+    </div>
+
+     <div onclick="goToSmartphones()" class="card">
+        <h3>Upto 80% off | Books</h3>
+        <img src="https://m.media-amazon.com/images/I/81BE7eeKzAL._AC_UY327_FMwebp_QL65_.jpg">
+    </div>
+
+     <div onclick="goToWomenClothing()" class="card">
+        <h3>Upto 50% off | Styles for Women</h3>
+        <img src="https://m.media-amazon.com/images/G/31/img2020/fashion/WA_2020/Winerflipnov/P0BBD/Tops__Tees._SS400_QL85_.jpg ">
+    </div>
+
+    <div onclick="goTokitchenandhome()" class="card">
+        <h3>Appliances for your home | Up to 55% off</h3>
+        <img src="https://m.media-amazon.com/images/I/81yTM-9pcDL._AC_UL480_QL65_.jpg ">
     </div>
 </section>
 
