--- a/women-clothing.html
+++ b/women-clothing.html
@@ -1,4 +1,4 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,200" />
-    <title>Men's Clothing</title>
+    <title>Women's Clothing</title>
 </head>
 <body>
     <nav class="navbar">
@@ -30,25 +30,24 @@
         </div>
         <div class="prod-cc">
             <div class="prod-card">
-                <img src="https://m.media-amazon.com/images/I/61hEqppV-ZL._AC_UL800_FMwebp_QL65_.jpg" alt="">
-                <p class="company-name">Vierdo</p>
-                <h3 class="prod-title">Veirdo® Oversized Loose Baggy Fit Drop Shooulder Half Sleeves Pure Cotton Will Never Die Graphic Printed T-Shirt for Men</h3>
+                <img src="https://m.media-amazon.com/images/I/71F9YL0k2QL._AC_UL480_FMwebp_QL65_.jpg" alt="">
+                <p class="company-name">BIBA</p>
+                <h3 class="prod-title">BIBA Women Dress</h3>
                 <div class="price-rating">
-                    <span class="price"><span class="material-symbols-outlined">currency_rupee</span> 359</span>
+                    <span class="price"><span class="material-symbols-outlined">currency_rupee</span> 2209</span>
                     <span class="rating"><span class="material-symbols-outlined star">
                             star
-                    </span> 4.2</span>
+                    </span> 4.7</span>
                 </div>
             <button class="add-to-cart">Add to Cart <span class="material-symbols-outlined">shopping_cart</span></button>
             </div>
 
             <div class="prod-card">
-                <img src="https://m.media-amazon.com/images/I/61vWSaQ2NML._AC_UL800_FMwebp_QL65_.jpg" alt="">
-                <p class="company-name">Vierdo</p>
-                <h3 class="prod-title">Veirdo® Oversized Loose Baggy Fit Drop Shooulder Half Sleeves Pure Cotton Will Never Die
-                    Graphic Printed T-Shirt for Men</h3>
+                <img src="https://m.media-amazon.com/images/I/61eAfsjf3+L._AC_UL480_FMwebp_QL65_.jpg" alt="">
+                <p class="company-name">The Souled Store</p>
+                <h3 class="prod-title">Black (Cropped Fit) Women and Girls Tops|Slim fit Solid| Full Sleeve|97% Cotton 3% Lycra Black Color Women Cropped Tops</h3>
                 <div class="price-rating">
-                    <span class="price"><span class="material-symbols-outlined">currency_rupee</span> 359</span>
+                    <span class="price"><span class="material-symbols-outlined">currency_rupee</span> 629</span>
                     <span class="rating"><span class="material-symbols-outlined star">
                             star
                         </span> 4.2</span>
@@ -57,12 +56,25 @@
             </div>
 
             <div class="prod-card">
-                <img src="https://m.media-amazon.com/images/I/71-0-6qzwxL._AC_UL800_FMwebp_QL65_.jpg" alt="">
-                <p class="company-name">Vierdo</p>
+                <img src="https://m.media-amazon.com/images/I/81vI0vCnwsL._AC_UL480_FMwebp_QL65_.jpg" alt="">
+                <p class="company-name">Pepe Jeans</p>
+                <h3 class="prod-title">Pepe Jeans Women's Juin Printed Shirt with Patch Pocket and Button Details</h3>
+                <div class="price-rating">
+                    <span class="price"><span class="material-symbols-outlined">currency_rupee</span> 859</span>
+                    <span class="rating"><span class="material-symbols-outlined star">
+                            star
+                        </span> 4.2</span>
+                </div>
+                <button class="add-to-cart">Add to Cart <span class="material-symbols-outlined">shopping_cart</span></button>
+            </div>
+
+            <div class="prod-card">
+                <img src="https://m.media-amazon.com/images/I/61uGDWQ9DTL._AC_UL480_FMwebp_QL65_.jpg" alt="">
+                <p class="company-name">Pepe Jeans</p>
                 <h3 class="prod-title">Veirdo® Oversized Loose Baggy Fit Drop Shooulder Half Sleeves Pure Cotton Will Never Die
                     Graphic Printed T-Shirt for Men</h3>
                 <div class="price-rating">
-                    <span class="price"><span class="material-symbols-outlined">currency_rupee</span> 359</span>
+                    <span class="price"><span class="material-symbols-outlined">currency_rupee</span> 1200</span>
                     <span class="rating"><span class="material-symbols-outlined star">
                             star
                         </span> 4.2</span>
@@ -71,12 +83,11 @@
             </div>
 
             <div class="prod-card">
-                <img src="https://m.media-amazon.com/images/I/61U+9sLBh5L._AC_UL800_FMwebp_QL65_.jpg" alt="">
-                <p class="company-name">Vierdo</p>
-                <h3 class="prod-title">Veirdo® Oversized Loose Baggy Fit Drop Shooulder Half Sleeves Pure Cotton Will Never Die
-                    Graphic Printed T-Shirt for Men</h3>
+                <img src="https://m.media-amazon.com/images/I/61gam4ws5zL._AC_UL480_FMwebp_QL65_.jpg" alt="">
+                <p class="company-name">BIBA</p>
+                <h3 class="prod-title">BIBA Women Rayon Kurta</h3>
                 <div class="price-rating">
-                    <span class="price"><span class="material-symbols-outlined">currency_rupee</span> 359</span>
+                    <span class="price"><span class="material-symbols-outlined">currency_rupee</span> 639</span>
                     <span class="rating"><span class="material-symbols-outlined star">
                             star
                         </span> 4.2</span>
@@ -85,11 +96,11 @@
             </div>
 
             <div class="prod-card">
-                <img src="https://m.media-amazon.com/images/I/61Eto+ZvCsL._AC_UL480_FMwebp_QL65_.jpg" alt="">
-                <p class="company-name">LEOTUDE</p>
-                <h3 class="prod-title">Oversized T-shirt, loose fit, so very comfortable to wear, also looks very trendy & classy</h3>
+                <img src="https://m.media-amazon.com/images/I/81HzIUMBEgL._AC_UL480_FMwebp_QL65_.jpg" alt="">
+                <p class="company-name">Global Desi </p>
+                <h3 class="prod-title">Womens Mandarin Collar Printed Tunic</h3>
                 <div class="price-rating">
-                    <span class="price"><span class="material-symbols-outlined">currency_rupee</span> 319</span>
+                    <span class="price"><span class="material-symbols-outlined">currency_rupee</span> 570</span>
                     <span class="rating"><span class="material-symbols-outlined star">
                             star
                         </span> 4.2</span>
@@ -98,11 +109,11 @@
             </div>
 
             <div class="prod-card">
-                <img src="https://m.media-amazon.com/images/I/51syzdDo6qL._AC_UL480_FMwebp_QL65_.jpg" alt="">
-                <p class="company-name">Bewakoof</p>
-                <h3 class="prod-title">Bewakoof Men's Printed 100% Cotton T-Shirt - Regular Fit, Round Neck, Half Sleeves</h3>
+                <img src="https://m.media-amazon.com/images/I/61eCYipAEGL._AC_UL480_FMwebp_QL65_.jpg" alt="">
+                <p class="company-name">Indya</p>
+                <h3 class="prod-title">Women Navy Cross Stitch Crop Top And Pants (Set of 2)</h3>
                 <div class="price-rating">
-                    <span class="price"><span class="material-symbols-outlined">currency_rupee</span> 399</span>
+                    <span class="price"><span class="material-symbols-outlined">currency_rupee</span> 1439</span>
                     <span class="rating"><span class="material-symbols-outlined star">
                             star
                         </span> 4.2</span>
@@ -111,25 +122,11 @@
             </div>
 
             <div class="prod-card">
-                <img src="https://m.media-amazon.com/images/I/61b9iUTMwJL._AC_UL480_QL65_.jpg" alt="">
-                <p class="company-name">Red Tape</p>
-                <h3 class="prod-title">Red Tape Round Neck T-Shirt for Men | Comfortable & Breathable | 100% cotton , Regular Fit </h3>
+                <img src="https://sulbha.com/cdn/shop/products/AF.247.8_1024x1024.jpg?v=1564693989" alt="">
+                <p class="company-name">Indya</p>
+                <h3 class="prod-title">Women's Georgette Shift Midi Dress</h3>
                 <div class="price-rating">
-                    <span class="price"><span class="material-symbols-outlined">currency_rupee</span> 475</span>
-                    <span class="rating"><span class="material-symbols-outlined star">
-                            star
-                        </span> 4.2</span>
-                </div>
-                <button class="add-to-cart">Add to Cart <span class="material-symbols-outlined">shopping_cart</span></button>
-            </div>
-
-            <div class="prod-card">
-                <img src="https://m.media-amazon.com/images/I/61Gzs9t1RGL._AC_UL480_FMwebp_QL65_.jpg" alt="">
-                <p class="company-name">Vierdo</p>
-                <h3 class="prod-title">Veirdo® Oversized Loose Baggy Fit Drop Shooulder Half Sleeves Pure Cotton Will Never Die
-                    Graphic Printed T-Shirt for Men</h3>
-                <div class="price-rating">
-                    <span class="price"><span class="material-symbols-outlined">currency_rupee</span> 359</span>
+                    <span class="price"><span class="material-symbols-outlined">currency_rupee</span> 559</span>
                     <span class="rating"><span class="material-symbols-outlined star">
                             star
                         </span> 4.2</span>
